fix: Extra gap in tables

--- a/client/src/styles/table.scss
+++ b/client/src/styles/table.scss
@@ -14,3 +14,6 @@
     padding-right: 0 !important;
 }
 
+._sticky:after {
+    width: 0 !important;
+}
